<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/high_score"
    android:weightSum="1">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/leaderboard"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="191dp"
            android:layout_height="fill_parent"
            android:text="@string/name"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:typeface="sans" />


    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_weight="0.85" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/back"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="0.52" />

        <Button
            android:id="@+id/newgame_highscore"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:onClick="newGame_highScore"
            android:text="@string/newGame"
            android:layout_gravity="right"
            android:layout_weight="0.48" />
    </LinearLayout>


</LinearLayout>