<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_name"
    tools:context="com.example.ralf.tictactoe_ralf.PlayerChoice">

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/im_Ready"
        android:labelFor="@+id/play_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.842"
        android:onClick="playGame"/>

    <EditText
        android:id="@+id/player1_input"
        android:labelFor="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        />



    <EditText
        android:id="@+id/player2_input"
        android:labelFor="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="201dp"
        app:layout_constraintBottom_toTopOf="@+id/play"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player1_input"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Player1"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.146"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        android:layout_marginBottom="292dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player1_input"
        app:layout_constraintVertical_bias="0.254"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.017"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="30sp"
        android:textColor="@color/black"/>


</android.support.constraint.ConstraintLayout>
